First stab at solving nested tables

--- a/css/styles.less
+++ b/css/styles.less
@@ -266,7 +266,10 @@ button#tw-create {
         border-color: #595959;
     }
     img {
-        height: 35px;
+        height: 40px;
+        margin: 0;
+        padding: 2px 0px;
+        display: inline;
         -webkit-animation-name: rotate;
         -webkit-animation-duration: 1.5s;
         -webkit-animation-iteration-count: infinite;
@@ -279,9 +282,6 @@ button#tw-create {
     width: 90%;
     font-size: 15px;
     height: 45px;
-    svg path {
-        fill: black;
-    }
 }
 
 #tw-drag-icon {
